--- a/HW0/index.html
+++ b/HW0/index.html
@@ -22,7 +22,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Cat Game</h2>
 
 <ul>
 <li><strong>Originality:</strong>
