--- a/Digital Assignment 1/index.html
+++ b/Digital Assignment 1/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello! Amaze!</title>
+    <title>Hello There!</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -22,7 +22,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Cat and Mouse</h2>
 
 <ul>
 <li><strong>Originality:</strong>
