--- a/Digital Assignment 1/index.html
+++ b/Digital Assignment 1/index.html
@@ -26,7 +26,7 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
-What is original about your game?
+The player can now move up and down.
 </li>
 
 <li><strong>Technical Merit:</strong>
