--- a/Digital Assignment 1/index.html
+++ b/Digital Assignment 1/index.html
@@ -22,7 +22,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Cat and Mouse</h2>
+<h2>Archer vs Ghosts</h2>
 
 <ul>
 <li><strong>Originality:</strong>
