--- a/Digital Assignment 1/index.html
+++ b/Digital Assignment 1/index.html
@@ -26,7 +26,7 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
-The player can now move up and down.
+The player can now move up and down. THe enemy blasts are faster and more frequent. 
 </li>
 
 <li><strong>Technical Merit:</strong>
