--- a/Digital Assignment 1/index.html
+++ b/Digital Assignment 1/index.html
@@ -26,39 +26,43 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
-The player can now move up and down. THe enemy blasts are faster and more frequent. 
+The player can now move up and down. The goal is to get as many bullets as possible without touching the ghosts.
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
+The player can move up, down, left, and right. 
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
-What did you learn from this prototype?
-What was the easiest or hardest part of making it?
+I learned how to use sprites and how to move a body 
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+Archer: https://opengameart.org/content/animated-ranger-modification-original-calciumtrice
+Electric Balls: https://opengameart.org/content/energy-ball
+Ghosts: https://opengameart.org/content/ghost-animated
+Explosion: https://opengameart.org/content/electrical-disintegration-animation
+Arrow: https://opengameart.org/content/arrow-0
+Background: https://opengameart.org/content/cobblestone-tileset
 <ul>
 <li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
+This was from a copy from the Phaser 2 examples
 </li>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Try to catch as many electric balls as possible without touching the ghosts.
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+It has a fantasy theme
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+This game is an arcade game, third person shooter. 
 </li>
 
 <li><strong>Prototype Goal:</strong>
@@ -66,28 +70,28 @@ What game mechanic is this prototype evaluating?
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+Players should experience the thrill of fighting an army of ghosts with a bow and arrow. 
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+ Players can move their characters around using the arrows. To shoot, the player must press the space bar. The player can only shoot upward.
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+Try to collect a lot of energy blasts and shoot the ghosts for even more points. 
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
-How will the dramatic tension interact with the gameplay tension?
+This is a fight between the ghosts and the archer. The ghosts think their blasts hurt the archer, but it actually helps him. 
+The archer, however, cannot handle the power of the ghosts when he touches them and dies. 
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+This game is for everyone who enjoys arcade games. 
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+It can take from <1 min to 5 minutes
 </li>
 
 </ul>
