--- a/Digital Assignment 1/index.html
+++ b/Digital Assignment 1/index.html
@@ -66,7 +66,7 @@ This game is an arcade game, third person shooter.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+It is evaluating movement of sprites and bodies.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
