--- a/Digital Assignment 1/index.html
+++ b/Digital Assignment 1/index.html
@@ -38,12 +38,27 @@ I learned how to use sprites and how to move a body
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Archer: https://opengameart.org/content/animated-ranger-modification-original-calciumtrice
-Electric Balls: https://opengameart.org/content/energy-ball
-Ghosts: https://opengameart.org/content/ghost-animated
-Explosion: https://opengameart.org/content/electrical-disintegration-animation
-Arrow: https://opengameart.org/content/arrow-0
-Background: https://opengameart.org/content/cobblestone-tileset
+<ul>
+<li>Archer: https://opengameart.org/content/animated-ranger-modification-original-calciumtrice</a></li>
+</ul>
+<ul>
+<li>Electric Balls: https://opengameart.org/content/energy-ball</a></li>
+</ul>
+<ul>
+<li>Ghosts: https://opengameart.org/content/ghost-animated</a></li>
+</ul>
+<ul>
+<li>Explosion: https://opengameart.org/content/electrical-disintegration-animation</a></li>
+</ul>
+<ul>
+<li>Arrow: https://opengameart.org/content/arrow-0</a></li>
+</ul>
+<ul>
+<li>Background: https://opengameart.org/content/cobblestone-tileset</a></li>
+</ul>
+
+
+
 <ul>
 <li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
 </ul>
