--- a/Digital Assignment 1/index.html
+++ b/Digital Assignment 1/index.html
@@ -26,7 +26,8 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
-The player can now move up and down. The goal is to get as many bullets as possible without touching the ghosts.
+The player can now move up and down. The goal is to get as many bullets as possible without touching the ghosts.The blasts from the 
+    ghosts are now faster and in greater number. Arrows are less frequently possible.
 </li>
 
 <li><strong>Technical Merit:</strong>
