--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ body
 <li><a href="Digital Assignment 1/index.html">Digital Assignment 1</a></li>
 </ol>
 
+<ol>
+<li><a href="Digital Assignment 2/index.html">Digital Assignment 2</a></li>
+</ol>
+
 
 <p>Here are the templates:
 
