--- a/Digital Assignment 2/index.html
+++ b/Digital Assignment 2/index.html
@@ -22,72 +22,80 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Tiny Ghost Game</h2>
 
 <ul>
 <li><strong>Originality:</strong>
-What is original about your game?
+Bad guys were added and the map is new. 
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
+Players can jump around and scare the guys.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
-What did you learn from this prototype?
-What was the easiest or hardest part of making it?
+I learned how to use tilemaps and phaser physics. 
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+The tile map was made on mapediter 
 <ul>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li>Guy: <a href="https://www.piskelapp.com/p/agxzfnBpc2tlbC1hcHByEwsSBlBpc2tlbBiAgKDdq471CAw/edit">Guy</a></li>
 </ul>
+<ul>
+<li>ghost: <a href="https://opengameart.org/content/unsealed-ghost">ghost</a></li>
+</ul>
+<ul>
+<li>background: <a href="https://opengameart.org/content/dark-night-full-moon-background">background</a></li>
+</ul>   
+<ul>
+<li>tileset: <a href="https://opengameart.org/content/fallen -">tileset</a></li>
+</ul>  
 </li>
 
+
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
+This game was copied from the phaser example starstruck. Some code from invaders was also used. 
 </li>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Players must scare away all the lost tourists. 
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+There is a supernatural theme. 
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+This is a platformer game.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+The player will use the space bar to jump and the arrows to move back and forth. 
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+Players should experience the joy of scaring the guys. 
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+Players can jump and move around. When they collide with a guy the guy will disappear. Once all the guys are gone, the player wins. 
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+Players should figure out the best platforms to use to get to the guy. 
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
-How will the dramatic tension interact with the gameplay tension?
+The players are a tiny ghost who is trying to protect their home from the tourists who are lost due to the poor calculations of their travel agent. 
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+This game is for anyone who enjoys supernatural themes. 
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+It takes less that 3 minutes to play
 </li>
 
 </ul>
