--- a/Digital Assignment 2/index.html
+++ b/Digital Assignment 2/index.html
@@ -49,7 +49,7 @@ The tile map was made on mapediter
 <li>background: <a href="https://opengameart.org/content/dark-night-full-moon-background">background</a></li>
 </ul>   
 <ul>
-<li>tileset: <a href="https://opengameart.org/content/fallen -">tileset</a></li>
+<li>tileset: <a href="https://opengameart.org/content/fallen">tileset</a></li>
 </ul>  
 </li>
 
