--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@ body
 <li><a href="Digital Assignment 2/index.html">Digital Assignment 2</a></li>
 </ol>
 
-
+<ol>
+<li><a href="Digital Assignment 3/index.html">Digital Assignment 3</a></li>
+</ol>
 <p>Here are the templates:
 
 <ul>
