--- a/Digital Assignment 3/index.html
+++ b/Digital Assignment 3/index.html
@@ -5,6 +5,8 @@
     <title>Hello! Amaze!</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/menuState.js"></script>
+    <script src="js/endState.js"></script>
 
 <style>
 body
