--- a/Digital Assignment 3/index.html
+++ b/Digital Assignment 3/index.html
@@ -29,7 +29,7 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Feed the Cats</h2>
+<h2>Feed the Cats!</h2>
 
 <ul>
 <li><strong>Originality:</strong>
