--- a/Digital Assignment 3/index.html
+++ b/Digital Assignment 3/index.html
@@ -10,6 +10,7 @@
 	<script src="js/Preloader.js"></script>
 	<script src="js/MainMenu.js"></script>
 	<script src="js/Game.js"></script>
+	<script src="js/endState.js"></script>
 	<!-- main.js must come last since it references the other ones. -->
 	<script src="js/main.js"></script>
 
