--- a/Digital Assignment 3/index.html
+++ b/Digital Assignment 3/index.html
@@ -34,75 +34,81 @@ body
 
 <ul>
 <li><strong>Originality:</strong>
-What is original about your game?
+I made the tile map and story. 
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
+Uses game states, tilemap, audio, and random.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
-What did you learn from this prototype?
-What was the easiest or hardest part of making it?
+I learned how to use game states, put in audio, and get random numbers. 
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+
 <ul>
-<li>Loading screen: self-made</li>
-<li>Puppy image: self-made</li>
-<li>Button: Phaser example <a href="https://phaser.io/examples/v2/buttons/action-on-click">Action On Click</a></li>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
-<li>Music: "Poppers and Prosecco" Kevin MacLeod (<a href="incompetech.com">incompetech.com</a>). Licensed under <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons: By Attribution 3.0 License</a></li>
+<li>Loading bar: part of prototype</li>
+<li>Cat image: self-made</li>
+<li>Button: Phaser example (this was edited)<a href="https://phaser.io/examples/v2/buttons/action-on-click">Action On Click</a></li>
+<li>Fish: <a href="https://opengameart.org/content/2d-retro-fish">Fish</a></li>
+<li>Cat Sprite: <a href="https://opengameart.org/content/2d-cat-sprite">Cat</a></li>
+<li>Cat Song: <a href="https://opengameart.org/content/catsong">Cat Song</a></li>
+<li>Girl: <a href="https://opengameart.org/content/lpc-girl-variant-2">Girl</a></li>
+<li>Cat scream: <a href="http://soundbible.com/1509-Cat-Scream.html">cat scream</a></li>
+<li>sky bg: <a href="https://opengameart.org/content/sky-background">sky bg</a></li>
+<li>purring: <a href="http://soundbible.com/1002-Purring.html">purring</a></li>
+<li>fridge: <a href="https://opengameart.org/content/fridge">fridge</a></li>
+<li>counter: <a href="https://opengameart.org/content/kitchen-countertop">counter</a></li>
+<li>corner: <a href="https://opengameart.org/content/kitchen-countertop2">corner</a></li>
+<li>oven: <a href="https://opengameart.org/content/oven">oven</a></li>
+<li>sink: <a href="https://opengameart.org/content/sink">sink</a></li>
+<li>floor: <a href="https://opengameart.org/content/clean-repeatable-tile">floor</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
-<ul>
-<li>The code for this example is adapted from the <a href="https://github.com/photonstorm/phaser/tree/v2.6.2/resources/Project%20Templates/Basic">Phaser Basic Project Template</a></li>
-</ul>
+This game is sort of similar to a very simplified version of OverCooked. Started from a prototype. 
 </li>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Pick up the fish and bring it to a cat who wants it. 
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+It is a collector game.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+The input is keyboard and mouse. It uses randomness and collecting
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+This prototype is testing picking up objects and using it for something else. 
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+Players should experience either the reward for giving the correct fish, or the wrath of giving the wrong fish.
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+Players will use the arrows to control the girl. When she walks over a fish, she will hold it. When she walks to a cat she will give it to them. If the cat wants it it will stay and be happy, but if it doesn't you will lose points and it will leave. Giving the fish to a cat who wants it earns points. Scores decrease as time goes on. 
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+Players should avoid areas where they can run into cats with the wrong fish.
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
-How will the dramatic tension interact with the gameplay tension?
+The girl has too many very needy cats. They are very picky eaters too. If she gives them the wrong fish, they will get mad and leave. 
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+Anyone who likes to feed cats.
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+Less than a minute.
 </li>
 
 </ul>
