--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ body
 <ol>
 <li><a href="Digital Assignment 3/index.html">Digital Assignment 3</a></li>
 </ol>
+
+<ol>
+<li><a href="Digital Assignment 4/index.html">Digital Assignment 4</a></li>
+</ol>
 <p>Here are the templates:
 
 <ul>
