--- a/Digital Assignment 4/index.html
+++ b/Digital Assignment 4/index.html
@@ -29,42 +29,44 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Escape the Farm!!</h2>
 
 <ul>
 <li><strong>Originality:</strong>
-What is original about your game?
+The tile map is original, story is original, and puzzles are original. 
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
+Physics such as gravity and drag are used. Has multiple stages, audio, and sprites. 
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
-What did you learn from this prototype?
-What was the easiest or hardest part of making it?
+I learned how to add more levels to a game. Dealing with multiple levels and finding good assets was the hardest part. 
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Loading screen: self-made</li>
-<li>Puppy image: self-made</li>
-<li>Button: Phaser example <a href="https://phaser.io/examples/v2/buttons/action-on-click">Action On Click</a></li>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
-<li>Music: "Poppers and Prosecco" Kevin MacLeod (<a href="incompetech.com">incompetech.com</a>). Licensed under <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons: By Attribution 3.0 License</a></li>
+<li>Rainbow Picture: self-made</li>
+<li>Mountain Picture: self-made</li>
+<li>Loading Rainbow: part of the template</li>
+<li>Button: Phaser example (was edited) <a href="https://phaser.io/examples/v2/buttons/action-on-click">Action On Click</a></li>
+<li>Chicken: <a href="https://opengameart.org/content/lpc-chicken-rework">chicken</a></li>
+<li>Bridge Tile Set: <a href="https://opengameart.org/content/wood-bridge">bridge tile set</a></li>
+<li>Wooden Crate: <a href="https://opengameart.org/content/simple-toon-wooden-crate-texture">crate</a></li>
+<li>Blue star: <a href="https://opengameart.org/content/blue-star">star</a></li>
+<li>Menu Music: <a href="https://opengameart.org/content/gone-fishin">menu music</a></li>
+<li>Level One Music: <a href="https://opengameart.org/content/casual-game-track">lvl one music</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
 <ul>
-<li>The code for this example is adapted from the <a href="https://github.com/photonstorm/phaser/tree/v2.6.2/resources/Project%20Templates/Basic">Phaser Basic Project Template</a></li>
+<li>This uses the game state template. Some of the code is borrowed from my previous games. 
 </ul>
 </li>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Players must manipulate their surroundings to escape. 
 </li>
 
 <li><strong>Theme:</strong>
@@ -72,7 +74,7 @@ State which of the Storymatic themes you used.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+This is a plat-former game that uses the arrows to jump and move. 
 </li>
 
 <li><strong>Prototype Goal:</strong>
@@ -88,12 +90,11 @@ A paragraph describing the actions the player can perform, the system dynamics, 
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+Players should use the boxes around them to jump on areas they cannot reach. 
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
-How will the dramatic tension interact with the gameplay tension?
+The player is a chicken who is trying to escape the farm after recently hearing that they are about to be dinner. 
 </li>
 
 <li><strong>Target Audience:</strong>
