--- a/Digital Assignment 4/index.html
+++ b/Digital Assignment 4/index.html
@@ -9,9 +9,12 @@
 	<script src="js/Boot.js"></script>
 	<script src="js/Preloader.js"></script>
 	<script src="js/MainMenu.js"></script>
+	<script src="js/Level2.js"></script>
 	<script src="js/Game.js"></script>
+
 	<!-- main.js must come last since it references the other ones. -->
 	<script src="js/main.js"></script>
+	
 
 <style>
 body
