--- a/Digital Assignment 4/index.html
+++ b/Digital Assignment 4/index.html
@@ -11,7 +11,7 @@
 	<script src="js/MainMenu.js"></script>
 	<script src="js/Level2.js"></script>
 	<script src="js/Game.js"></script>
-
+	<script src="js/endGame.js"></script>
 	<!-- main.js must come last since it references the other ones. -->
 	<script src="js/main.js"></script>
 	
