--- a/Digital Assignment 4/index.html
+++ b/Digital Assignment 4/index.html
@@ -59,12 +59,14 @@ I learned how to add more levels to a game. Dealing with multiple levels and fin
 <li>Blue star: <a href="https://opengameart.org/content/blue-star">star</a></li>
 <li>Menu Music: <a href="https://opengameart.org/content/gone-fishin">menu music</a></li>
 <li>Level One Music: <a href="https://opengameart.org/content/casual-game-track">lvl one music</a></li>
+<li>Grass Tileset: <a href="https://opengameart.org/content/platformer-grass-tileset">grass tileset</a></li>
+<li>Forest Picture: <a href="https://opengameart.org/content/forest-background-art-2">forest</a></li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
 <ul>
-<li>This uses the game state template. Some of the code is borrowed from my previous games. 
+<li>This uses one of the game state templates. Some of the code is borrowed from my previous games. 
 </ul>
 </li>
 
@@ -73,7 +75,7 @@ Players must manipulate their surroundings to escape.
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+This is a puzzle plat-former game.
 </li>
 
 <li><strong>Mandated Variety:</strong>
@@ -81,15 +83,15 @@ This is a plat-former game that uses the arrows to jump and move.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+This is evaluating level change and how to make each level more challenging and build off what the gamer learned from the previous level. 
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+The player should experience the challenge of trying figure out the best way to escape. 
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+Players will use the arrows to jump and move side to side. At level 1 players learn they can manipulate their environment to get out. Level 2, they realize that not all escape routes are as they seem.  
 </li>
 
 <li><strong>Strategies:</strong>
@@ -101,11 +103,11 @@ The player is a chicken who is trying to escape the farm after recently hearing 
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+Anyone who likes trying to figure out how to get out places.
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+It takes 1-3 minutes
 </li>
 
 </ul>
