--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@ body
 <ol>
 <li><a href="Digital Assignment 4/index.html">Digital Assignment 4</a></li>
 </ol>
+
+<ol>
+<li><a href="Digital Assignment 5/index.html">Digital Assignment 5</a></li>
+</ol>
 <p>Here are the templates:
 
 <ul>
