--- a/Digital Assignment 5/index.html
+++ b/Digital Assignment 5/index.html
@@ -30,35 +30,51 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>RainDrops</h2>
 
 <ul>
 <li><strong>Originality:</strong>
-What is original about your game?
+Characters (not the art), puzzles and maps are original. 
 </li>
 
 <li><strong>Technical Merit:</strong>
-What is interesting about your game technology?
+This game allows the player to interact with other sprites. They can push or pull the boxes.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
-What did you learn from this prototype?
-What was the easiest or hardest part of making it?
+I learned a way how to make the sprite pull boxes. 
 </li>
 
 <li><strong>Prototype Assets:</strong>
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
-<li>Bouncing Phaser image: <a href="https://phaser.io/download/logo">Phaser logo</a></li>
+<li>menu/controls menu/end game music: <a href="https://opengameart.org/content/magical-forest-thingy-prototype">music</a></li>
+</ul>
+<ul>
+<li>level 1 music: <a href="https://opengameart.org/content/troubled-forest-looping">level 1 music</a></li>
+</ul>
+<ul>
+<li>girl sprite (temporary use): <a href="https://opengameart.org/content/lpc-girl-variant-2">girl</a></li>
+</ul>
+<ul>
+<li>boxes: self made</li>
+</ul>
+<ul>
+<li>leaf background: self made</li>
+</ul>
+<ul>
+<li>play and controls buttons: edited from template</li>
+</ul>
+<ul>
+<li>loading button: from template</li>
 </ul>
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing code from a Phaser Example, you must say so here. If you borrow code from elsewhere, you must say so here.
-</li>
+This game is be similar to indie platformer games such as GRIS. It is also very similar to my previous game.
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Players need to figure out how to get to the other side of the stage.
 </li>
 
 <li><strong>Theme:</strong>
@@ -70,32 +86,30 @@ State which input, randomness, genre, and play style you used in this prototype.
 </li>
 
 <li><strong>Prototype Goal:</strong>
-What game mechanic is this prototype evaluating?
+This is prototyping different aspects of puzzle making. (such as difficulty and mechanics) 
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+I want the player to be able to solve the puzzle on their own, but not have it obvious to the point it is boring. 
 </li>
 
 <li><strong>Gameplay:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
-</li>
+The player can jump and move side to side using the arrows. Some objects can be interacted with when the player bumps into it. 
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+Players should try moving around and seeing what they can interact with to try to get to the other side. 
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
-How will the dramatic tension interact with the gameplay tension?
+This story takes place in an enchanted forest. The main character is a girl who is searching for light magic infused raindrops to gain enough magic to heal her younger sister. 
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+The audience is anyone who likes puzzle games. 
 </li>
 
 <li><strong>Play Time:</strong>
-How long does your game take to play?
+First level takes less than a minute to play.
 </li>
 
 </ul>
