--- a/Digital Assignment 5/index.html
+++ b/Digital Assignment 5/index.html
@@ -78,11 +78,11 @@ Players need to figure out how to get to the other side of the stage.
 </li>
 
 <li><strong>Theme:</strong>
-State which of the Storymatic themes you used.
+The theme is adventure and exploring.
 </li>
 
 <li><strong>Mandated Variety:</strong>
-State which input, randomness, genre, and play style you used in this prototype.
+Uses keyboard, deterministic, explorer, puzzle.
 </li>
 
 <li><strong>Prototype Goal:</strong>
