--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@ body
 <ol>
 <li><a href="Digital Assignment 5/index.html">Digital Assignment 5</a></li>
 </ol>
+<ol>
+<li><a href="Digital Assignment 6/index.html">Digital Assignment 6</a></li>
+</ol>
 <p>Here are the templates:
 
 <ul>
