whole game pretty much

--- a/Digital Assignment 6/index.html
+++ b/Digital Assignment 6/index.html
@@ -55,13 +55,22 @@ Did you make your prototype assets from scratch? Did you borrow them? Cite your 
 <li>level 1 music: <a href="https://opengameart.org/content/troubled-forest-looping">level 1 music</a></li>
 </ul>
 <ul>
-<li>girl sprite (temporary use): <a href="https://opengameart.org/content/lpc-girl-variant-2">girl</a></li>
+<li>level 2 music: <a href="https://opengameart.org/content/sirens-in-darkness">level 2 music</a></li>
+</ul>
+<ul>
+<li>girl sprite (temporary use/edited): <a href="https://opengameart.org/content/lpc-girl-variant-2">girl</a></li>
 </ul>
 <ul>
 <li>boxes: self made</li>
 </ul>
 <ul>
+<li>key: self made</li>
+</ul>
+<ul>
 <li>leaf background: self made</li>
+</ul>
+<ul>
+<li>tile maps/ tile sets: self made</li>
 </ul>
 <ul>
 <li>play and controls buttons: edited from template</li>
@@ -110,7 +119,7 @@ The audience is anyone who likes puzzle games.
 </li>
 
 <li><strong>Play Time:</strong>
-First level takes less than a minute to play.
+First level takes less than a minute to play. Second level takes a minute or two. 
 </li>
 
 </ul>
