--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ body
 <ol>
 <li><a href="Digital Assignment 6/index.html">Digital Assignment 6</a></li>
 </ol>
+<ol>
+<li>Digital Assignment 6-pass</li>
+</ol>
 <p>Here are the templates:
 
 <ul>
