--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body
 <li><a href="Digital Assignment 6/index.html">Digital Assignment 6</a></li>
 </ol>
 <ol>
-<li>Digital Assignment 7-pass</li>
+<li>Digital Assignment 7-pass</a></li>
 </ol>
 <p>Here are the templates:
 
