--- a/index.html
+++ b/index.html
@@ -25,28 +25,12 @@ body
 
 <ol>
 <li><a href="Digital Assignment 1/index.html">Digital Assignment 1</a></li>
-</ol>
-
-<ol>
 <li><a href="Digital Assignment 2/index.html">Digital Assignment 2</a></li>
-</ol>
-
-<ol>
 <li><a href="Digital Assignment 3/index.html">Digital Assignment 3</a></li>
-</ol>
-
-<ol>
 <li><a href="Digital Assignment 4/index.html">Digital Assignment 4</a></li>
-</ol>
-
-<ol>
 <li><a href="Digital Assignment 5/index.html">Digital Assignment 5</a></li>
-</ol>
-<ol>
 <li><a href="Digital Assignment 6/index.html">Digital Assignment 6</a></li>
-</ol>
-<ol>
-<li>Digital Assignment 7-pass</a></li>
+<li>Digital Assignment 7-pass</li>
 </ol>
 <p>Here are the templates:
 
